Frontend complete not tested

--- a/frontend/lung.html
+++ b/frontend/lung.html
@@ -13,26 +13,50 @@
         <form name="#" id="form" method="post" class="form">
 
             <div class="inputs">
-                <input type="number" name="n" id="n" placeholder="Enter N ratio" required>
+                <input type="number" name="age" id="age" placeholder="Enter age" required>
             </div>
             <div class="inputs">
-                <input type="number" name="p" id="p" placeholder="Enter P ratio" required>
+                <input type="number" name="smoke" id="smoke" placeholder="Smoking? YES-1,NO-2" min="1" max="2" required>
+            </div>
+
+            <div class="inputs">
+                <input type="number" name="yellow" id="yellow" placeholder="Yellow Fingers? YES-1,NO-2" min="1" max="2" required>
+            </div>
+
+            <div class="inputs">
+                <input type="number" name="anxiety" id="anxiety" placeholder="Anxiety? YES-1,NO-2" min="1" max="2" required>
             </div>
             <div class="inputs">
-                <input type="number" name="k" id="k" placeholder="Enter K ratio" required>
+                <input type="number" name="chronic" id="chronic" placeholder="Chronic Disease? YES-1,NO-2" min="1" max="2" required>
             </div>
             <div class="inputs">
-                <input type="number" name="rain" id="rain" placeholder="Enter rainfall(in cm)" required>
+                <input type="number" name="fatigue" id="fatigue" placeholder="Fatigue? YES-1,NO-2" min="1" max="2" required>
             </div>
             <div class="inputs">
-                <input type="number" name="temp" id="temp" placeholder="Enter temprature(C)" required>
+                <input type="number" name="allergy" id="allergy" placeholder="Allergy? YES-1,NO-2" min="1" max="2" required>
             </div>
             <div class="inputs">
-                <input type="number" name="hum" id="hum" placeholder="Enter humidity(%)" required>
+                <input type="number" name="wheeze" id="wheeze" placeholder="Wheezing? YES-1,NO-2" min="1" max="2" required>
             </div>
             <div class="inputs">
-                <input type="number" name="ph" id="ph" placeholder="Enter ph of soil" required>
+                <input type="number" name="alcohol" id="alcohol" placeholder="Alcohol? YES-1,NO-2" min="1" max="2" required>
             </div>
+            <div class="inputs">
+                <input type="number" name="cough" id="cough" placeholder="Cough? YES-1,NO-2" min="1" max="2" required>
+            </div>
+            <div class="inputs">
+                <input type="number" name="breath" id="breath" placeholder="Short Breath? YES-1,NO-2" min="1" max="2" required>
+            </div>
+            <div class="inputs">
+                <input type="number" name="swallow" id="swallow" placeholder="Swallowing difficulty? YES-1,NO-2" min="1" max="2" required>
+            </div>
+            <div class="inputs">
+                <input type="number" name="chest" id="chest" placeholder="Chest Pain? YES-1,NO-2" min="1" max="2" required>
+            </div>
+            <div class="inputs">
+                <input type="number" name="gender" id="gendet" placeholder="Gender? Male-1,Female-2" min="1" max="2" required>
+            </div>
+            
             <div class="inputs">
                 <input type="submit" value="submit" class="btn">
             </div>
@@ -43,6 +67,6 @@
     <div class="result">
         <p id="ans" ></p>
     </div>
-    <script src="crop.js"></script>
+    <script src="lung.js"></script>
 </body>
 </html>
