--- a/frontend/crop.html
+++ b/frontend/crop.html
@@ -22,16 +22,16 @@
                 <input type="number" name="k" id="k" placeholder="Enter K ratio" required>
             </div>
             <div class="inputs">
-                <input type="number" name="rain" id="rain" placeholder="Enter rainfall(in cm)" required>
+                <input type="number" name="rain" id="rain" placeholder="Enter rainfall(in cm)" min="0" required>
             </div>
             <div class="inputs">
-                <input type="number" name="temp" id="temp" placeholder="Enter temprature(C)" required>
+                <input type="number" name="temp" id="temp" placeholder="Enter temprature(C)" min="-30" max="50" required>
             </div>
             <div class="inputs">
-                <input type="number" name="hum" id="hum" placeholder="Enter humidity(%)" required>
+                <input type="number" name="hum" id="hum" placeholder="Enter humidity(%)" min="0" max="100" required>
             </div>
             <div class="inputs">
-                <input type="number" name="ph" id="ph" placeholder="Enter ph of soil" required>
+                <input type="number" name="ph" id="ph" placeholder="Enter ph of soil" min="0" max="14" required>
             </div>
             <div class="inputs">
                 <input type="submit" value="submit" class="btn">
