--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,10 +38,10 @@
                 <a href="crop.html">Crop Prediction</a>
             </div>
             <div class="card">
-                <a href="#">Lung Cancer Prediction</a>
+                <a href="lung.html">Lung Cancer Prediction</a>
             </div>
             <div class="card">
-                <a href="#">Water Potable Prediction</a>
+                <a href="water.html">Water Potable Prediction</a>
             </div>
         </div>
 
