--- a/frontend/lung.html
+++ b/frontend/lung.html
@@ -27,6 +27,9 @@
                 <input type="number" name="anxiety" id="anxiety" placeholder="Anxiety? YES-1,NO-2" min="1" max="2" required>
             </div>
             <div class="inputs">
+                <input type="number" name="peer" id="peer" placeholder="Anxiety? YES-1,NO-2" min="1" max="2" required>
+            </div>
+            <div class="inputs">
                 <input type="number" name="chronic" id="chronic" placeholder="Chronic Disease? YES-1,NO-2" min="1" max="2" required>
             </div>
             <div class="inputs">
@@ -54,7 +57,7 @@
                 <input type="number" name="chest" id="chest" placeholder="Chest Pain? YES-1,NO-2" min="1" max="2" required>
             </div>
             <div class="inputs">
-                <input type="number" name="gender" id="gendet" placeholder="Gender? Male-1,Female-2" min="1" max="2" required>
+                <input type="number" name="gender" id="gender" placeholder="Gender? Male-1,Female-2" min="1" max="2" required>
             </div>
             
             <div class="inputs">
