--- a/frontend/water.html
+++ b/frontend/water.html
@@ -25,7 +25,7 @@
                 <input type="number" name="amines" id="amines" placeholder="Enter amines(mg/L)" required>
             </div>
             <div class="inputs">
-                <input type="number" name="sulphur" id="sulphut" placeholder="Enter sulphur(mg/L)" required>
+                <input type="number" name="sulphur" id="sulphur" placeholder="Enter sulphur(mg/L)" required>
             </div>
             <div class="inputs">
                 <input type="number" name="conductivity" id="conductivity" placeholder="Enter conductivity(S/m)" required>
@@ -37,7 +37,7 @@
                 <input type="number" name="methane" id="methane" placeholder="Enter methane(mg/L)" required>
             </div>
             <div class="inputs">
-                <input type="number" name="turbiduty" id="turbidity" placeholder="Enter turbidity(NTU)" required>
+                <input type="number" name="turbidity" id="turbidity" placeholder="Enter turbidity(NTU)" required>
             </div>
             <div class="inputs">
                 <input type="submit" value="submit" class="btn">
